--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,36 +1,36 @@
 name: CICD
 
 on:
-	push:
-	  branches: ['deploy-to-ec2']
-		
+  push:
+    branches: [deploy-to-ec2]
+
 jobs:
-	build:
-		runs-on:[ubuntu-latest]
-		steps:
-			- name: CHeckout source
-			  uses: actions/checkout@v3
-			- name: Setup Java
-			  uses: actions/setup-java@v3
-			 with:
-				distribution: 'temurin'
-				java-version: '17'
-			- name: Build Project
-			  run: nvm clean install -DskipTests
-			- name: Login to docker hub
-			  run: docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
-			- name: Build docker image
-			  run: docker build -t grupo2Java/proyectoFinal .
-			- name: Publish to docker hub
-			  run: docker push grupo2Java/proyectoFinal:latest
-			  
-	deploy:
-		needs: build
-		runs-on: [aws-ec2]
-		steps:
-			- name : Pull Image from docjer hub
-			  run: docker pull grupo2Java/proyectoFinal:latest
-			- name: Delete old container
-			  run: docker rm -f proyecto-final-container
-			- name: Run docker container
-			  run: docker run -d -p 8080:8080 --name proyecto-final-container grupo2Java/proyectoFinal
+  build:
+    runs-on: [ubuntu-latest]
+    steps:
+      - name: CHeckout source
+        uses: actions/checkout@v3
+      - name: Setup Java
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+      - name: Build Project
+        run: nvm clean install -DskipTests
+      - name: Login to docker hub
+        run: docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
+      - name: Build docker image
+        run: docker build -t grupo2Java/proyectoFinal .
+      - name: Publish to docker hub
+        run: docker push grupo2Java/proyectoFinal:latest
+
+  deploy:
+    needs: build
+    runs-on: [aws-ec2]
+    steps:
+      - name : Pull Image from docjer hub
+        run: docker pull grupo2Java/proyectoFinal:latest
+      - name: Delete old container
+        run: docker rm -f proyecto-final-container
+      - name: Run docker container
+        run: docker run -d -p 8080:8080 --name proyecto-final-container grupo2Java/proyectoFinal
