--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=proyectoFinal
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+spring.jpa.show-sql=true
+server.port=8080
+spring.jpa.properties.hibernate.format_sql=true
+spring.activemq.broker-url=${BROKER_URL}
+spring.activemq.user=${BROKER_USER}
+spring.activemq.password=${BROKER_PASSWORD}
+spring.activemq.packages.trust-all=true
