Consumer modificado para recibir mensajes en bytes.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
 server.port=8080
-spring.jpa.properties.hibernate.format_sql=true
 spring.activemq.broker-url=${BROKER_URL}
 spring.activemq.user=${BROKER_USER}
 spring.activemq.password=${BROKER_PASSWORD}
 spring.activemq.packages.trust-all=true
+spring.jms.pub-sub-domain=true
